# hillm

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  app.doql.less  goal.yaml  index.html  local.dev.txt  project.sh  pyproject.toml
.hillm/events/: app.hillm.events.jsonl
docs/: README.md  configuration.md  control-layer.md
examples/: README.md  env.example  load-env.sh  run-all-dry-run.sh
examples/cli/: devices.sh  dsl-health.sh  read-dry-run.sh  scan.sh  status-ecosystem.sh  status-mouse-dry-run.sh  write-dry-run.sh
examples/control-layer/: cli-exec.sh  dsl-live-policy.sh  nlp-mouse-port.sh  nlp-to-dsl.sh  rest-health.sh  uri-decode-sensor.sh  uri-dispatch.sh  uri-shorthand-read.sh
examples/devices/audio/: status.sh
examples/devices/camera/: capture-dry-run.sh
examples/devices/display/: status.sh
examples/devices/input/: mouse-status-live.sh
examples/devices/modbus/: read-dry-run.sh
examples/devices/sensor/: temp-read-dry-run.sh  temp-resolve-address.sh  temp-status-live.sh
examples/devices/serial/: read-dry-run.sh
examples/devices/usb/: list.sh
examples/dsl/: devices-usb.sh  read-sensor-temp.sh  run-smoke.sh  smoke.dsl
examples/nlp2hillm/: apply-connect-modbus.sh  apply-env-dry-run.sh  apply-read-dry-run.sh  apply-status-mouse-dry-run.sh  apply-status-mouse-live.sh  apply-temperature-live.sh  apply-verbose-rules.sh  check-serial-env.sh  llm-openrouter.sh  to-dsl-camera.sh  to-dsl-health.sh  to-dsl-list-usb.sh  to-dsl-modbus-connect.sh  to-dsl-mouse-port-pl.sh  to-dsl-mouse-status-en.sh  to-dsl-mouse.sh  to-dsl-temperature.sh
examples/nlp2uri/: compile-uri.sh  run-uri.sh
src/hillm/: __init__.py  __main__.py  cli.py  compat.py  controller.py  project_env.py  registry.py  resolve.py  validation.py
src/hillm/contracts/: __init__.py  device.py
src/hillm/discovery/: __init__.py  scan.py
src/hillm/transports/: __init__.py  audio.py  base.py  display.py  dry_run.py  http_device.py  input.py  modbus.py  mqtt.py  serial.py  usb.py  v4l.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_examples.py  test_hillm.py  test_project_env.py  test_registry_serial.py  test_resolve.py
