[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hillm"
version = "0.1.4"
description = "Hardware Interface LLM — control displays, cameras, audio, USB, serial, Modbus, and more."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Semcod" }, { name = "Tom Sapletta", email = "tom@sapletta.com" }]
license = "Apache-2.0"
keywords = ["llm", "hardware", "iot", "modbus", "serial", "usb", "automation"]
dependencies = [
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
serial = ["pyserial>=3.5,<4.0"]
modbus = ["pymodbus>=3.6,<4.0"]
mqtt = ["paho-mqtt>=2.0,<3.0"]
display = []
audio = []
camera = []
usb = []
all-transports = [
    "pyserial>=3.5,<4.0",
    "pymodbus>=3.6,<4.0",
    "paho-mqtt>=2.0,<3.0",
]
# Workspace adapters (dsl2hillm, uri2hillm, …) are not on PyPI — use:
#   uv sync --extra dev          (recommended)
#   bash packages/install-dev.sh (pip editable fallback)
control = []
dev = [
    "build>=1.0,<2.0",
    "pygments>=2.0,<3.0",
    "pytest>=8.0,<10.0",
    "ruff>=0.11,<0.16",
    "httpx>=0.27,<1.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "testql>=1.2.0",
]

[project.scripts]
hillm = "hillm.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hillm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv.workspace]
members = [
    "packages/dsl2hillm",
    "packages/uri2hillm",
    "packages/nlp2hillm",
    "packages/cli2hillm",
    "packages/mcp2hillm",
    "packages/rest2hillm",
]

[tool.uv.sources]
hillm = { workspace = true }
dsl2hillm = { workspace = true }
uri2hillm = { workspace = true }
nlp2hillm = { workspace = true }
cli2hillm = { workspace = true }
mcp2hillm = { workspace = true }
rest2hillm = { workspace = true }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
